loga nasa ajouter

--- a/app/src/main/res/layout/nasa.xml
+++ b/app/src/main/res/layout/nasa.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="250dp"
     android:layout_height="100dp">
 
@@ -9,7 +10,8 @@
         android:layout_height="fill_parent"
         android:layout_marginLeft="@dimen/mtrl_card_spacing"
         android:layout_marginTop="@dimen/mtrl_card_spacing"
-        android:layout_marginRight="@dimen/mtrl_card_spacing">
+        android:layout_marginRight="@dimen/mtrl_card_spacing"
+        app:cardBackgroundColor="#00FFFFFF">
 
         <!-- TODO: Update blank fragment layout -->
         <LinearLayout
